@@ -33,6 +33,7 @@
 #define _CRTDBG_MAP_ALLOC
 #include <stdlib.h>
 #include <crtdbg.h>
+/* #define MALLOC_LINT */	/* ntservice.c */
 #endif
 
 /*
